update route task
