# src/routes/tasks.routes.js
@@ -4,10 +4,12 @@ const taskController = require("../controller/task.controllers");
 const router = express.Router();
 
 router
-    .get('/all', taskController.getAll)
-    .get('/:id', taskController.getById)
-    .post('/new', taskController.create)
-    .put('/:id', taskController.update)
-    .delete('/:id', taskController._delete);
+    .get("/all", taskController.getAll)
+    .get("/:id", taskController.getById)
+    .post("/new", taskController.create)
+    .put("/:id", taskController.update)
+    .delete("/:id", taskController._delete);
+
+router.get("/all/complete-task", taskController.getByComplete);
 
 module.exports = router;
