# src/swagger.json
@@ -155,6 +155,9 @@
               "$ref": "#/definitions/Task"
             }
           },
+          "404": {
+            "description": "registro no encontrado"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -183,6 +186,9 @@
               "$ref": "#/definitions/Task"
             }
           },
+          "404": {
+            "description": "registro no encontrado"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -199,12 +205,14 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "Busqueda de id para seleccionar tarea a modificar"
+            "description": "Busqueda de id para seleccionar tarea a modificar",
+            "require": true
           },
           {
             "name": "body",
             "in": "body",
             "description": "Datos para nuevo registro",
+            "require": true,
             "schema": {
               "$ref": "#/definitions/AddTask"
             }
@@ -212,7 +220,13 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Task"
+            }
+          },
+          "404": {
+            "description": "registro no encontrado"
           },
           "500": {
             "description": "Internal Server Error"
@@ -235,6 +249,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "registro no encontrado"
           },
           "500": {
             "description": "Internal Server Error"
@@ -270,6 +287,35 @@
           }
         }
       }
+    },
+    "/api/v1/tasks/all/complete-task": {
+      "get": {
+        "tags": [
+          "Task"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "complete",
+            "in": "query",
+            "type": "boolean"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Task"
+            }
+          },
+          "404": {
+            "description": "registro no encontrado"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -297,11 +343,23 @@
           "type": "string",
           "example": "Completar Modulo tareas"
         },
+        "day": {
+          "type": "string",
+          "example": "2024-03-24"
+        },
+        "hours": {
+          "type": "string",
+          "example": "17:21:00"
+        },
+        "complete": {
+          "type": "boolean",
+          "example": false
+        },
         "idCategory": {
           "type": "number",
           "example": 1
         },
-        "category": {
+        "Category": {
           "$ref": "#/definitions/Category"
         }
       }
@@ -312,6 +370,14 @@
         "name": {
           "type": "string",
           "example": "Completar Modulo tareas"
+        },
+        "day": {
+          "type": "string",
+          "example": "2024-03-24"
+        },
+        "hours": {
+          "type": "string",
+          "example": "17:21:00"
         },
         "idCategory": {
           "type": "number",
